--- a/about.html
+++ b/about.html
@@ -3,33 +3,150 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - My Personal Website</title>
+  <title>My Personal Website</title>
   <style>
-    body { margin:0; font-family: Arial, sans-serif; background:#f4f4f9; color:#333; }
-    header { background:#4a90e2; color:white; padding:15px; text-align:center; }
-    nav a { color:white; margin:0 10px; text-decoration:none; font-weight:bold; }
-    nav a:hover { text-decoration:underline; }
-    main { text-align:center; padding:40px; }
-    footer { background:#222; color:white; text-align:center; padding:15px; font-size:14px; }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f4f4f9;
+      color: #333;
+    }
+    header {
+      background: #4a90e2;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      font-size: 24px;
+      font-weight: bold;
+    }
+    .container {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 10px;
+    }
+    .card {
+      background: #111;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 15px 20px;
+      border-radius: 12px;
+      margin-bottom: 15px;
+    }
+    .card-info {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+    .icon {
+      width: 50px;
+      height: 50px;
+      border-radius: 10px;
+      background: #4a90e2;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      font-size: 14px;
+      color: white;
+    }
+    .text h3 {
+      margin: 0;
+      font-size: 16px;
+    }
+    .text p {
+      margin: 2px 0 0;
+      font-size: 14px;
+      color: #aaa;
+    }
+    .get-btn {
+      background: #e60073;
+      color: white;
+      border: none;
+      padding: 10px 18px;
+      border-radius: 10px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .get-btn:hover {
+      background: #ff3385;
+    }
   </style>
 </head>
 <body>
   <header>
-    <h2>My Personal Website</h2>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    My Personal Website
   </header>
 
-  <main>
-    <h1>About Me</h1>
-    <p>Hello! This is the About page where you can write about yourself.</p>
-  </main>
+  <div class="container">
 
-  <footer>
-    © 2025 My Name
-  </footer>
+    <div class="card">
+      <div class="card-info">
+        <div class="icon">E</div>
+        <div class="text">
+          <h3>ESign NEW ✅</h3>
+          <p>Esign Gac V2 ★★★★☆ (1K)</p>
+        </div>
+      </div>
+      <button class="get-btn">GET</button>
+    </div>
+
+    <div class="card">
+      <div class="card-info">
+        <div class="icon">E</div>
+        <div class="text">
+          <h3>ESign NEW ✅</h3>
+          <p>Esign Global V6 ★★★★★ (110K)</p>
+        </div>
+      </div>
+      <button class="get-btn">GET</button>
+    </div>
+
+    <div class="card">
+      <div class="card-info">
+        <div class="icon">E</div>
+        <div class="text">
+          <h3>ESign NEW ✅</h3>
+          <p>Esign Global V5 ★★★★★ (105K)</p>
+        </div>
+      </div>
+      <button class="get-btn">GET</button>
+    </div>
+
+    <div class="card">
+      <div class="card-info">
+        <div class="icon">E</div>
+        <div class="text">
+          <h3>ESign NEW ✅</h3>
+          <p>Esign Global V4 ★★★★☆ (100K)</p>
+        </div>
+      </div>
+      <button class="get-btn">GET</button>
+    </div>
+
+    <div class="card">
+      <div class="card-info">
+        <div class="icon">E</div>
+        <div class="text">
+          <h3>ESign NEW ✅</h3>
+          <p>Esign Global V3 ★★★★☆ (1M)</p>
+        </div>
+      </div>
+      <button class="get-btn">GET</button>
+    </div>
+
+    <div class="card">
+      <div class="card-info">
+        <div class="icon">E</div>
+        <div class="text">
+          <h3>ESign NEW ✅</h3>
+          <p>Esign Global V2 ★★★★☆ (900K)</p>
+        </div>
+      </div>
+      <button class="get-btn">GET</button>
+    </div>
+
+  </div>
 </body>
 </html>
